fix: white space scroll for some pages

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,16 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+html {
+  overflow: hidden;
+  height: 100%;
+}
+
+body {
+  overflow: auto;
+  height: 100%;
+}
+
 li {
   list-style-type: none;
 }
@@ -12,4 +22,5 @@ textarea {
 
 span {
   position: static !important;
+  height: -webkit-fill-available !important;
 }
